--- a/deploy/docker/multi/web/nginx.conf
+++ b/deploy/docker/multi/web/nginx.conf
@@ -17,6 +17,10 @@ http {
         server localhost:5234;
     }
 
+    # MCP Gateway
+    upstream mcp-gateway {
+        server mcp-gateway:5236;
+    }
     server {
         listen 80;
         server_name localhost;
@@ -39,6 +43,14 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /gateway/ {
+            proxy_pass http://mcp-gateway;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
