feat: add forward headers support

--- a/.env.example
+++ b/.env.example
@@ -174,6 +174,30 @@ MCP_GATEWAY_RELOAD_INTERVAL=600s
 MCP_GATEWAY_RELOAD_SWITCH=true
 
 # =============================================================================
+# FORWARD HEADERS CONFIGURATION
+# =============================================================================
+
+# Enable forward headers functionality (default: false for backward compatibility)
+FORWARD_ENABLED=false
+
+# Key name for forward headers in MCP tool arguments
+# This is the parameter name that tools will use to pass headers to be forwarded
+FORWARD_MCP_ARG_KEY_FOR_HEADER=__forwardHeaders
+
+# Comma-separated list of headers to allow (empty means allow all)
+FORWARD_ALLOW_HEADERS=
+
+# Comma-separated list of headers to ignore during forwarding
+# These headers will be filtered out and not forwarded to downstream services
+FORWARD_IGNORE_HEADERS=Accept, Accept-Encoding, Accept-Language, Host, Cookie, Connection, User-Agent, Content-Length, Content-Type
+
+# Case insensitive header matching (default: true)
+FORWARD_HEADER_CASE_INSENSITIVE=true
+
+# Override existing headers instead of adding to them (default: false)
+FORWARD_HEADER_OVERRIDE_EXISTING=false
+
+# =============================================================================
 # WEB INTERFACE CONFIGURATION
 # =============================================================================
 
