--- a/configs/mcp-gateway.yaml
+++ b/configs/mcp-gateway.yaml
@@ -2,7 +2,6 @@ port: ${MCP_GATEWAY_PORT:5235}
 pid: "${MCP_GATEWAY_PID:/var/run/mcp-gateway.pid}"
 reload_interval: ${MCP_GATEWAY_RELOAD_INTERVAL:600s}
 reload_switch: ${MCP_GATEWAY_RELOAD_SWITCH:true}
-transparent_headers_arg_name: ${TRANSPARENT_HEADERS_ARG_NAME:x-transparent-headers}
 
 # Logger configuration
 logger:
@@ -107,3 +106,13 @@ auth:
       - "Mcp-Session-Id"
       - "mcp-protocol-version"
     allowCredentials: true
+
+forward:
+  enabled: ${FORWARD_ENABLED:false}
+  mcp_arg:
+    key_for_header: "${FORWARD_MCP_ARG_KEY_FOR_HEADER:__forwardHeaders}"
+  header:
+    allow_headers: "${FORWARD_ALLOW_HEADERS:}"
+    ignore_headers: "${FORWARD_IGNORE_HEADERS: Accept, Accept-Encoding, Accept-Language, Host, Cookie, Connection, User-Agent, Content-Length, Content-Type}"
+    case_insensitive: ${FORWARD_HEADER_CASE_INSENSITIVE:true}
+    override_existing: ${FORWARD_HEADER_OVERRIDE_EXISTING:false}
