feat(tracing): integrate OpenTelemetry tracing support with configuration options for Jaeger, including downstream request and error capture

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,38 @@ LOGGER_COLOR=false
 LOGGER_STACKTRACE=true
 
 # =============================================================================
+# TRACING (OpenTelemetry -> Jaeger)
+# =============================================================================
+
+# Enable OpenTelemetry tracing export (default off)
+TRACING_ENABLED=false
+# Logical service name to appear in Jaeger UI
+TRACING_SERVICE_NAME=mcp-gateway
+# Jaeger OTLP endpoint: gRPC (4317) or HTTP (4318)
+TRACING_ENDPOINT=localhost:4317
+# Export protocol: grpc or http
+TRACING_PROTOCOL=grpc
+# Allow insecure transport (true for local dev)
+TRACING_INSECURE=true
+# Sampling rate 0.0~1.0 (use 1.0 for dev)
+TRACING_SAMPLER_RATE=0.1
+# Environment tag for traces: dev/staging/prod
+TRACING_ENV=dev
+
+# Trace capture (downstream sampling controls)
+# Whether to capture downstream error response preview and its max length
+TRACE_ERR_BODY_ENABLED=false
+TRACE_ERR_BODY_MAX_LEN=256
+# Whether to capture selected downstream request arguments
+TRACE_REQ_ARGS_ENABLED=false
+# Max length for captured downstream request fields (tags)
+TRACE_REQ_ARG_MAX_LEN=256
+# Whether to capture rendered downstream request body
+TRACE_REQ_BODY_ENABLED=false
+# Max length for captured downstream request body preview
+TRACE_REQ_BODY_MAX_LEN=256
+
+# =============================================================================
 # DATABASE CONFIGURATION
 # =============================================================================
 
